packages/markdown-core/elements/link_scanners.c
/* Generated by re2c 4.6 */
#include "link_scanners.h"

/* Shared byte-scanner configuration and lexical primitives. */






bufsize_t scan_link_title(const unsigned char *data, bufsize_t length, bufsize_t offset)
{
  if (!data || offset < 0 || offset >= length) {
    return 0;
  }
  const unsigned char *input = data + offset;
  size_t p = 0, remaining = (size_t)(length - offset);
  size_t marker = 0;
  size_t start = p;

{
	unsigned char yych;
	unsigned int yyaccept = 0;
	static const unsigned char yybm[256] = {
		  0, 208, 208, 208, 208, 208, 208, 208,
		208, 208, 208, 208, 208, 208, 208, 208,
		208, 208, 208, 208, 208, 208, 208, 208,
		208, 208, 208, 208, 208, 208, 208, 208,
		208, 208, 192, 208, 208, 208, 208, 144,
		 80,  80, 208, 208, 208, 208, 208, 208,
		208, 208, 208, 208, 208, 208, 208, 208,
		208, 208, 208, 208, 208, 208, 208, 208,
		208, 208, 208, 208, 208, 208, 208, 208,
		208, 208, 208, 208, 208, 208, 208, 208,
		208, 208, 208, 208, 208, 208, 208, 208,
		208, 208, 208, 208,  32, 208, 208, 208,
		208, 208, 208, 208, 208, 208, 208, 208,
		208, 208, 208, 208, 208, 208, 208, 208,
		208, 208, 208, 208, 208, 208, 208, 208,
		208, 208, 208, 208, 208, 208, 208, 208,
		208, 208, 208, 208, 208, 208, 208, 208,
		208, 208, 208, 208, 208, 208, 208, 208,
		208, 208, 208, 208, 208, 208, 208, 208,
		208, 208, 208, 208, 208, 208, 208, 208,
		208, 208, 208, 208, 208, 208, 208, 208,
		208, 208, 208, 208, 208, 208, 208, 208,
		208, 208, 208, 208, 208, 208, 208, 208,
		208, 208, 208, 208, 208, 208, 208, 208,
		208, 208, 208, 208, 208, 208, 208, 208,
		208, 208, 208, 208, 208, 208, 208, 208,
		208, 208, 208, 208, 208, 208, 208, 208,
		208, 208, 208, 208, 208, 208, 208, 208,
		208, 208, 208, 208, 208, 208, 208, 208,
		208, 208, 208, 208, 208, 208, 208, 208,
		208, 208, 208, 208, 208, 208, 208, 208,
		208, 208, 208, 208, 208, 208, 208, 208
	};
	yych = (p < remaining ? input[p] : 0);
	if (yych <= '&') {
		if (yych == '"') goto yy2;
	} else {
		if (yych <= '\'') goto yy3;
		if (yych <= '(') goto yy4;
	}
	++p;
yy1:
	{ return 0; }
yy2:
	yyaccept = 0;
	++p;
	marker = p;
	yych = (p < remaining ? input[p] : 0);
	if (yych <= 0x00) goto yy1;
	goto yy6;
yy3:
	yyaccept = 0;
	++p;
	marker = p;
	yych = (p < remaining ? input[p] : 0);
	if (yych <= 0x00) goto yy1;
	goto yy12;
yy4:
	yyaccept = 0;
	++p;
	marker = p;
	yych = (p < remaining ? input[p] : 0);
	if (yych <= 0x00) goto yy1;
	if (yych == '(') goto yy1;
	goto yy17;
yy5:
	++p;
	yych = (p < remaining ? input[p] : 0);
yy6:
	if (yybm[0+yych] & 16) goto yy5;
	if (yych <= 0x00) goto yy7;
	if (yych <= '"') goto yy8;
	goto yy10;
yy7:
	p = marker;
	if (yyaccept <= 1) {
		if (yyaccept == 0) goto yy1;
		else goto yy9;
	} else {
		if (yyaccept == 2) goto yy14;
		else goto yy19;
	}
yy8:
	++p;
yy9:
	{ return (bufsize_t)(p - start); }
yy10:
	++p;
	yych = (p < remaining ? input[p] : 0);
	if (yybm[0+yych] & 16) goto yy5;
	if (yych <= 0x00) goto yy7;
	if (yych <= '"') goto yy21;
	goto yy10;
yy11:
	++p;
	yych = (p < remaining ? input[p] : 0);
yy12:
	if (yybm[0+yych] & 64) goto yy11;
	if (yych <= 0x00) goto yy7;
	if (yych >= '(') goto yy15;
yy13:
	++p;
yy14:
	{ return (bufsize_t)(p - start); }
yy15:
	++p;
	yych = (p < remaining ? input[p] : 0);
	if (yybm[0+yych] & 64) goto yy11;
	if (yych <= 0x00) goto yy7;
	if (yych <= '\'') goto yy22;
	goto yy15;
yy16:
	++p;
	yych = (p < remaining ? input[p] : 0);
yy17:
	if (yybm[0+yych] & 128) goto yy16;
	if (yych <= '(') goto yy7;
	if (yych >= '*') goto yy20;
yy18:
	++p;
yy19:
	{ return (bufsize_t)(p - start); }
yy20:
	++p;
	yych = (p < remaining ? input[p] : 0);
	if (yych <= ')') {
		if (yych <= 0x00) goto yy7;
		if (yych <= '(') goto yy16;
		goto yy23;
	} else {
		if (yych == '\\') goto yy20;
		goto yy16;
	}
yy21:
	yyaccept = 1;
	++p;
	marker = p;
	yych = (p < remaining ? input[p] : 0);
	if (yybm[0+yych] & 16) goto yy5;
	if (yych <= 0x00) goto yy9;
	if (yych <= '"') goto yy8;
	goto yy10;
yy22:
	yyaccept = 2;
	++p;
	marker = p;
	yych = (p < remaining ? input[p] : 0);
	if (yybm[0+yych] & 64) goto yy11;
	if (yych <= 0x00) goto yy14;
	if (yych <= '\'') goto yy13;
	goto yy15;
yy23:
	yyaccept = 3;
	++p;
	marker = p;
	yych = (p < remaining ? input[p] : 0);
	if (yybm[0+yych] & 128) goto yy16;
	if (yych <= '(') goto yy19;
	if (yych <= ')') goto yy18;
	goto yy20;
}

}
